# ReqStudio

./: .gitattributes  .gitignore  PRD.md  product-brief.md  project-context.md
_bmad-output/: lessons-learned.md
reqstudio/reqstudio-api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
reqstudio/reqstudio-api/alembic/: env.py
reqstudio/reqstudio-api/alembic/versions/: .gitkeep  025fa8768809_add_artifacts_and_versions.py  16d981d95c62_add_sessions_messages_workflows_tables.py  1735af9e88fb_add_sessions_messages_workflows.py  52dd8296039c_feat_add_refresh_tokens_table_story_2_3.py  60a83239e728_feat_add_projects_table_story_3_1.py  6d972f01c643_add_sessions_messages_workflows.py  a55b3c3e98f0_add_telemetry_columns.py  a6b7c8d9e0f1_add_latency_column.py  b4a2810feed3_feat_add_documents_and_document_chunks_.py  d4e574d1b4a2_add_sessions_messages_workflows.py
reqstudio/reqstudio-api/app/: __init__.py  main.py
reqstudio/reqstudio-api/app/core/: __init__.py  config.py  dependencies.py  error_handlers.py  exceptions.py  middleware.py  security.py  telemetry.py
reqstudio/reqstudio-api/scripts/: recreate_dev_user.py  rescue.py
reqstudio/reqstudio-api/tests/: conftest.py  test_advance_workflow_transition.py  test_artifacts.py  test_artifacts_coverage.py  test_artifacts_export.py  test_artifacts_render.py  test_auth_login.py  test_auth_refresh.py  test_auth_register.py  test_config.py  test_context_builder.py  test_db_utils.py  test_documents.py  test_documents_service.py  test_elicitation.py  test_elicitation_kickstart.py  test_elicitation_return_greeting.py  test_error_handlers.py  test_health.py  test_llm_client.py  test_middleware.py  test_pause_resume.py  test_projects.py  test_projects_service.py  test_sessions.py  test_sessions_service.py  test_sse.py  test_tenant_isolation.py
(+214 files in other folders)
