[project]
name = "reqstudio-api"
version = "0.1.0"
description = "ReqStudio Backend API"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests", "app"]
asyncio_mode = "auto"
addopts = "-p pytest_asyncio.plugin"
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["app"]
