[project]
name = "reqstudio-api"
version = "0.1.0"
description = "ReqStudio Backend API"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests", "app"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.File",
    "fastapi.Cookie",
    "fastapi.Header",
]

[tool.ruff.lint.per-file-ignores]
"app/core/config.py" = ["S104", "S105"]
"app/core/exceptions.py" = ["S105"]
"app/modules/auth/router.py" = ["S105"]
"app/modules/auth/schemas.py" = ["S105"]
"scripts/recreate_dev_user.py" = ["S105"]
"tests/test_auth_login.py" = ["S105"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
